cluster/infra/networking/traefik/app/gitlab-svc-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name gitlab
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: gitlab
spec:
  type: ExternalName
  externalName: minerva.hosts.alexsaphir.com
  ports:
    - name: http
      port: &port 7080
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Service
metadata:
  name: &name gitlab-registry
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: gitlab
spec:
  type: ExternalName
  externalName: minerva.hosts.alexsaphir.com
  ports:
    - name: http
      port: &port 7050
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Service
metadata:
  name: &name gitlab-pages
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: gitlab
spec:
  type: ExternalName
  externalName: minerva.hosts.alexsaphir.com
  ports:
    - name: http
      port: &port 7091
      protocol: TCP
      targetPort: *port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name gitlab
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: gitlab
  annotations:
    auth.home.arpa/disabled: 'true'
spec:
  ingressClassName: traefik
  rules:
    - host: gitlab.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab
                port:
                  number: 7080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name gitlab-registry
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: gitlab
  annotations:
    auth.home.arpa/disabled: 'true'
spec:
  ingressClassName: traefik
  rules:
    - host: registry.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-registry
                port:
                  number: 7050
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &name gitlab-pages
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: gitlab
  annotations:
    auth.home.arpa/disabled: 'true'
spec:
  ingressClassName: traefik
  rules:
    - host: '*.gitlab-pages.${DOMAIN_NAME}'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-pages
                port:
                  number: 7091
